; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mime.c_strippath.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mime.c_strippath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @strippath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @strippath(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i8* @strdup(i8* %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %18

11:                                               ; preds = %1
  %12 = load i8*, i8** %4, align 8
  %13 = call i8* @basename(i8* %12)
  %14 = call i8* @strdup(i8* %13)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i8*, i8** %5, align 8
  store i8* %17, i8** %2, align 8
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @basename(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
